configs/vs-back.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "test.com"
  gateways:
  - sampleapp-gateway
  http:
  - match:
    - uri:
        exact: "/api/hello"
    route:
    - destination:
        host: abc
	subset: v1
  - match:
    - uri:
        exact: "/api/v1"
    rewrite:
      uri: "/api/"
    route:
    - destination:
        host: abc
        subset: v1
  - match:
    - uri:
        exact: "/api/v2"
    rewrite:
      uri: "/api/"
    route:
    - destination:
        host: abc
        subset: v2
